New background photos, Added hover effects to boxes and name. Repositioned Name. Resized Header.

--- a/home.html
+++ b/home.html
@@ -12,26 +12,32 @@
 <body>
     <div id="page-container">
         <header>
-            <div id="headerContent">
+            <div id="name">
                 <h1>Elijah Palmer</h1>
+            </div>
+            <div id="headerContent">
                 <img id="portrait" src="Photos/20220117_085125.jpg" alt="Portrait of Author">
             </div>
         </header>
         <div id="content-wrap">
             <div class="content-Boxes">
-                <div id="box"><a class="linkBox" href="project.html">Projects</a></div>
-                <div id="box">Contact
+                <div class="box"><a class="linkBox" href="project.html">Projects
+                    <ul>
+                        <li>Calculator</li>
+                    </ul>
+                </a></div>
+                <div class="box">Contact
                     <ul>
                         <li>Facebook</li>
                     </ul>
                 </div>
-                <div id="box"><a class="linkBox" href="hobbies.html">Hobbies</a></div>
+                <div class="box"><a class="linkBox" href="hobbies.html">Hobbies</a></div>
             </div>
         </div>
         <footer>
             <ul class="footerNav">
-                <div>Contact</div>
-                <div>About</div>
+                <li>Contact</li>
+                <li>About</li>
             </ul>
         </footer>
     </div>
