Added NavBar element, added hover features to content boxes and name, added formatting to content inside boxes, cleaned up code, added comments

--- a/home.html
+++ b/home.html
@@ -18,20 +18,29 @@
             <div id="headerContent">
                 <img id="portrait" src="Photos/20220117_085125.jpg" alt="Portrait of Author">
             </div>
+            <nav>
+                <button>About Me</button>
+                <button>Contact</button>
+            </nav>
         </header>
         <div id="content-wrap">
             <div class="content-Boxes">
                 <div class="box"><a class="linkBox" href="project.html">Projects
-                    <ul>
+                    <ul class="boxList">
                         <li>Calculator</li>
                     </ul>
                 </a></div>
                 <div class="box">Contact
-                    <ul>
+                    <ul class="boxList">
                         <li>Facebook</li>
+                        <li>LinkedIn</li>
                     </ul>
                 </div>
-                <div class="box"><a class="linkBox" href="hobbies.html">Hobbies</a></div>
+                <div class="box"><a class="linkBox" href="hobbies.html">Hobbies
+                    <ul class="boxList">
+                        <li>Rally Racing</li>
+                    </ul>
+                </a></div>
             </div>
         </div>
         <footer>
