--- a/home.html
+++ b/home.html
@@ -13,17 +13,21 @@
     <div id="page-container">
         <header>
             <div id="name">
-                <h1>Elijah Palmer</h1>
+
             </div>
             <div id="headerContent">
-                <img id="portrait" src="Photos/20220117_085125.jpg" alt="Portrait of Author">
+                <h1>Elijah Palmer</h1>
             </div>
             <nav>
-                <button>About Me</button>
-                <button>Contact</button>
+
             </nav>
         </header>
         <div id="content-wrap">
+            <div id="about">
+                <img id="portrait" src="Photos/portrait.jpg" alt="Portrait of Author">
+                <p id="evSpeech">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit laboriosam adipisci repellendus ex. Ad aspernatur labore illo molestias quibusdam distinctio, debitis eos doloribus beatae quos modi totam enim eius corporis. Lorem ipsum
+                    dolor sit, amet consectetur adipisicing elit. Consequuntur et iusto quia quisquam magni, vitae neque tempore earum. Culpa error sed illo possimus, alias fugit laudantium laborum aspernatur laboriosam fuga!</p>
+            </div>
             <div class="content-Boxes">
                 <div class="box"><a class="linkBox" href="project.html">Projects
                     <ul class="boxList">
