--- a/home.html
+++ b/home.html
@@ -7,53 +7,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elijah Palmer</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div id="page-container">
-        <header>
-            <div id="name">
+    <header>
+        <div id="name">
 
-            </div>
-            <div id="headerContent">
-                <h1>Elijah Palmer</h1>
-            </div>
-            <nav>
-
-            </nav>
-        </header>
-        <div id="content-wrap">
-            <div id="about">
-                <img id="portrait" src="Photos/portrait.jpg" alt="Portrait of Author">
-                <p id="evSpeech">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit laboriosam adipisci repellendus ex. Ad aspernatur labore illo molestias quibusdam distinctio, debitis eos doloribus beatae quos modi totam enim eius corporis. Lorem ipsum
-                    dolor sit, amet consectetur adipisicing elit. Consequuntur et iusto quia quisquam magni, vitae neque tempore earum. Culpa error sed illo possimus, alias fugit laudantium laborum aspernatur laboriosam fuga!</p>
-            </div>
-            <div class="content-Boxes">
-                <div class="box"><a class="linkBox" href="project.html">Projects
+        </div>
+        <div id="headerContent">
+            <h1>Elijah Palmer</h1>
+        </div>
+    </header>
+    <div id="content-wrap">
+        <div id="about">
+            <img id="portrait" src="Photos/portrait.jpg" alt="Portrait of Author">
+            <div id="evSpeech">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit laboriosam adipisci repellendus ex. Ad aspernatur labore illo molestias quibusdam distinctio, debitis eos doloribus beatae quos modi totam enim eius corporis. Lorem ipsum dolor
+                sit, amet consectetur adipisicing elit. Consequuntur et iusto quia quisquam magni, vitae neque tempore earum. Culpa error sed illo possimus, alias fugit laudantium laborum aspernatur laboriosam fuga!</div>
+        </div>
+        <div class="content-Boxes">
+            <div class="box"><a class="linkBox" href="project.html">Projects
                     <ul class="boxList">
                         <li>Calculator</li>
                     </ul>
                 </a></div>
-                <div class="box">Contact
-                    <ul class="boxList">
-                        <li>Facebook</li>
-                        <li>LinkedIn</li>
-                    </ul>
-                </div>
-                <div class="box"><a class="linkBox" href="hobbies.html">Hobbies
+            <div class="box">Contact
+                <ul class="boxList">
+                    <li>Facebook</li>
+                    <li>LinkedIn</li>
+                </ul>
+            </div>
+            <div class="box"><a class="linkBox" href="hobbies.html">Hobbies
                     <ul class="boxList">
                         <li>Rally Racing</li>
                     </ul>
                 </a></div>
-            </div>
         </div>
-        <footer>
-            <ul class="footerNav">
-                <li>Contact</li>
-                <li>About</li>
-            </ul>
-        </footer>
     </div>
+    <footer>
+        <ul class="footerNav">
+            <li>Contact</li>
+            <li>About</li>
+        </ul>
+    </footer>
 </body>
 
 </html>
